--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -11,7 +11,7 @@
   }
 }
 
-@mixin pink__btn {
+.pink__btn {
   width: 320px;
   min-height: 50px;
   border-radius: 25px;
@@ -26,6 +26,15 @@
   color: $secondary-white;
   background-color: $primary-pink;
 
+  &:hover,
+  &:focus {
+    color: $primary-pink;
+    background-color: $light-pink;
+  }
+  &:active {
+    border: 2px solid $primary-pink;
+  }
+  
   @media(min-width: $tablet-width) {
     font-size: 16px;
   }
@@ -36,20 +45,13 @@
     border-radius: 35px;
     font-size: 18px;
     line-height: 19px;
-    transition: color 0.6s 0.1s, background-color 0.5s 0.2s;
+    transition: color 0.3s 0.1s, background-color 0.3s 0.2s;
 
-    &:hover,
-    &:focus {
-      color: $primary-pink;
-      background-color: $light-pink;
-    }
-    &:active {
-      border: 2px solid $primary-pink;
-    }
+    
   }
 }
 
-@mixin light__btn {
+.light__btn {
   width: 300px;
   min-height: 50px;
   border-radius: 25px;
@@ -75,7 +77,7 @@
     border-radius: 35px;
     font-size: 18px;
     line-height: 19px;
-    transition: color 0.6s 0.1s, background-color 0.5s 0.2s;
+    transition: color 0.3s 0.1s, background-color 0.3s 0.2s;
     &:hover,
     &:focus {
       color: $light-pink;
@@ -89,7 +91,7 @@
   }
 }
 
-@mixin show__btn {
+.show__btn {
   position: relative;
   max-width: 300px;
   font-size: 11px;
@@ -140,7 +142,7 @@
   color: $primary-pink;
   background: transparent;
   align-self: center;
-  transition: opacity 0.5s 0.1s;
+  transition: opacity 0.3s 0.1s;
 
   @media(min-width: $desktop-width) {
 
@@ -187,7 +189,7 @@
   align-self: center;
   text-align: center;
   cursor: pointer;
-  transition: opacity 0.5s 0.1s, color 0.5s 0.4s, box-shadow 0.5s 0.1s;
+  transition: opacity 0.3s 0.1s, color 0.3s 0.25s, box-shadow 0.3s 0.1s;
 }
 
 .pink-btn__hover {
@@ -209,7 +211,7 @@
   text-align: center;
   color: $primary-pink;
   background-color: $light-pink;
-  transition: background-color 0.7s 0.1s, color 0.5s 0.4s, box-shadow 0.5s 0.1s;
+  transition: background-color 0.7s 0.1s, color 0.3s 0.25s, box-shadow 0.3s 0.1s;
 }
 
 .light-btn__hover {
