--- a/src/assets/scss/blocksCatalog/catalog-complex-box.scss
+++ b/src/assets/scss/blocksCatalog/catalog-complex-box.scss
@@ -98,10 +98,11 @@
     height: 302px;
     position: relative;
 
-    img {
-      width: 100%;
-      height: 100%;
+    
+    img{
       object-fit: cover;
+      height: 100%;
+      width: 100%;
     }
   }
 
@@ -112,6 +113,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
+    z-index: 1;
 
     img {
       margin-left: 29px;
@@ -374,11 +376,14 @@
 }
 
 .filter-field.complex-field-deadlines {
-  width: 190px;
+  max-width: 190px;
   margin-top: 18px;
   margin-bottom: 0;
   padding-left: 0;
+  padding-right: 0;
 
+ 
+  
   .filter-field__select-arrow {
     margin-right: 6px;
     width: auto;
@@ -397,12 +402,10 @@
     border-radius: 2px;
     box-shadow: 0px 5px 6px -2px rgba(134, 134, 134, 0.3);
     border-top: none;
-    padding-right: 14px;
-    padding-bottom: 18px;
     overflow: hidden;
 
     &__inner {
-      padding: 16px 8px;
+      padding: 16px 8px 12px;
       padding-top: 8px;
       width: 100%;
       height: 100%;
@@ -447,18 +450,15 @@
     }
 
     label {
-      margin-bottom: 16px;
+      // margin-bottom: 16px;
       cursor: default;
       pointer-events: none;
-
+      padding-top: 0;
       &:last-child {
         margin-bottom: 0;
       }
     }
 
-    .check {
-      display: none;
-    }
   }
 
   .filter__input {
@@ -612,7 +612,7 @@
 
 .complex-advantages__features-item-box {
   border: 2px solid transparent;
-  transition: all 0.4s 0.1s;
+  transition: all 0.25s 0.1s;
 }
 
 .complex-advantages__features-item {
