--- a/src/assets/scss/blocksCatalog/filter-box.scss
+++ b/src/assets/scss/blocksCatalog/filter-box.scss
@@ -196,7 +196,23 @@
     margin-right: 8px;
   }
 
+  .filter-field__wrap-from-to{
+    
 
+    .filter__input::-webkit-input-placeholder {
+      /* Edge */
+      opacity: 1;
+    }
+
+    .filter__input::-ms-input-placeholder {
+      /* Internet Explorer 10-11 */
+      opacity: 1;
+    }
+
+    .filter__input::placeholder {
+      opacity: 1;
+    }
+  }
 
   .filter-buttons {
     display: flex;
