--- a/src/assets/scss/blocksCatalog/catalog-complex-box.scss
+++ b/src/assets/scss/blocksCatalog/catalog-complex-box.scss
@@ -856,7 +856,7 @@
 
 .pagination {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   max-width: 510px;
   margin: auto;
@@ -888,7 +888,7 @@
     font-size: 16px;
     font-weight: 700;
     transition: all 0.3s;
-
+    margin-right: 6px;
     &:hover {
       opacity: 0.8;
       background-color: $filter-less-bgc;
@@ -898,6 +898,9 @@
       background-color: $filter-less-bgc;
     }
 
+    &:last-child{
+      margin-right: 0;
+    }
   }
 
   &__prev,
