--- a/src/assets/scss/blocksCatalog/modal-map.scss
+++ b/src/assets/scss/blocksCatalog/modal-map.scss
@@ -170,12 +170,17 @@
   .map-wrapper {
     // margin-top: 200px;
     background: #fff;
-    height: 100%;
+    // height: 100%;
   }
 
   &--open {
     transform: translate(0, 0);
     visibility: visible;
+
+    position: fixed;
+    height: 100vh;
+    padding-bottom: 203px;
+    top: 200px;
   }
 
   &__title {
@@ -276,7 +281,7 @@
   &__form-inner {
     // height: 640px;
     // overflow-y: auto;
-    margin-right: -18px;
+    // margin-right: -18px;
 
     &::-webkit-scrollbar {
       width: 7px;
@@ -350,7 +355,7 @@
 }
 
 .map-filter-field {
-  margin-right: 18px;
+  // margin-right: 18px;
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
@@ -401,7 +406,7 @@
   .select-input {
     width: 100%;
     position: relative;
-    margin-left: 6px;
+    padding-left: 6px;
   }
 
   .checkboxes {
@@ -487,49 +492,7 @@
   // }
 }
 
-// .map-filter-field {
-//   margin-right: 18px;
-//   display: flex;
-//   justify-content: space-between;
-//   margin-bottom: 20px;
-//   align-items: center;
-//   position: relative;
 
-//   &:last-child {
-//     margin-bottom: 0;
-//   }
-
-//   &--margin-bottom {
-//     margin-bottom: 30px;
-//   }
-
-//   &__name {
-//     width: 110px;
-//     flex-shrink: 0;
-//     font-weight: 700;
-//     font-size: 14px;
-//   }
-
-//   &__select-arrow {
-//     pointer-events: none;
-//     position: absolute;
-//     padding-right: 6px;
-//     right: 0;
-//     top: 50%;
-//     transform: translate(0, -50%);
-//     width: 30px;
-//     height: 90%;
-//     z-index: 1;
-//     margin-right: 1px;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     text-align: center;
-//     background-color: #fff;
-//   }
-
-
-// }
 
 @media (max-width: $laptop-width) {
 
@@ -885,10 +848,5 @@
       }
     }
 
-  }
-}
-@media (max-height: 1000px){
-  .map-modal .map-wrapper{
-    height: auto ;
   }
 }
