Починил все карты в каталоге. +Мелкие исправления

--- a/src/assets/scss/blocksCatalog/catalog-complex-box.scss
+++ b/src/assets/scss/blocksCatalog/catalog-complex-box.scss
@@ -28,6 +28,7 @@
     top: 0;
     width: 100%;
     z-index: 2;
+    height: 100%;
 
     &--events-none {
       pointer-events: none;
@@ -154,6 +155,10 @@
 
   &__item-header {
     position: relative;
+
+    .inner-wrap{
+      position: relative;
+    }
 
   }
 
