--- a/src/assets/scss/blocksCatalog/modal-map.scss
+++ b/src/assets/scss/blocksCatalog/modal-map.scss
@@ -160,7 +160,7 @@
   z-index: 100;
   position: fixed;
   height: 100vh;
-  padding-bottom: 170px;
+  padding-bottom: 200px;
   top: 200px;
   background: #fff;
 
@@ -204,7 +204,7 @@
   .map-wrapper {
     // margin-top: 200px;
     background: #fff;
-    // height: 100%;
+    height: 100%;
   }
 }
 
@@ -269,6 +269,7 @@
 
 .map-filter {
   width: 392px;
+  overflow: auto;
   flex-shrink: 0;
   padding: 24px 18px 58px 38px;
   box-shadow: 15px 0px 8px -15px rgba(0, 0, 0, .25);
@@ -492,6 +493,7 @@
 
   .map-modal {
     top: 80px;
+    padding-bottom: 80px;
     overflow: hidden;
     .map-margin {
       display: none;
