--- a/src/assets/scss/blocksCatalog/catalog-footer.scss
+++ b/src/assets/scss/blocksCatalog/catalog-footer.scss
@@ -99,11 +99,15 @@
 .social {
   text-align: right;
 
-  &__site {
-    font-size: 18px;
-    font-weight: 700;
+  &__site{
     margin-top: 50px;
-    color: #ffffff;
+    
+    a{
+      font-size: 18px;
+      font-weight: 700;
+      color: #ffffff;
+      text-decoration: none;
+    }
   }
 
   &__list {
