--- a/src/assets/scss/blocks/estate.scss
+++ b/src/assets/scss/blocks/estate.scss
@@ -4,8 +4,7 @@
 }
 
 .estate__slider-box {
-  display: flex;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .estate__slider-item {
@@ -15,8 +14,8 @@
 
 .estate__slider-title {
   position: absolute;
-  top: 185px;
   left: 0;
+  bottom: 0;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -28,13 +27,15 @@
   color: $secondary-white;
   background-color: rgba(0, 0, 0, 0.5);
 }
-
-.estate__slider-img {
-  margin-bottom: 15px;
+.estate__slider-box-wrapper {
+  position: relative;
 }
+
+
 
 .estate__description-box {
   padding-left: 50px;
+  padding-right: 50px;
 }
 
 .estate__address {
@@ -69,7 +70,6 @@
 .estate__info {
   display: flex;
   flex-wrap: wrap;
-  width: 250px;
   font-size: 12px;
   font-weight: 400;
   line-height: 19px;
@@ -249,11 +249,10 @@
 
   .estate__slider-img {
     width: 100%;
-    height: 400px;
+    height: 580px;
   }
 
   .estate__slider-title {
-    top: 350px;
     padding: 20px;
     min-height: 50px;
     font-size: 18px;
@@ -276,9 +275,7 @@
     }
   }
 
-  .estate__info {
-    width: 300px;
-  }
+
 
   .estate__info-name {
     &::before {
@@ -311,7 +308,6 @@
   }
 
   .estate__slider-title {
-    top: 510px;
     min-height: 100px;
     font-size: 36px;
     line-height: 19px;
@@ -319,7 +315,7 @@
   }
 
   .estate__slider-img {
-    height: 610px;
+    height: 617px;
   }
 
   .estate__btn-box {
@@ -335,19 +331,8 @@
   .estate__description-box {
     position: relative;
     display: flex;
-    padding-left: 250px;
-
-    &::before {
-      position: absolute;
-      top: 0;
-      left: 20px;
-      width: 18px;
-      height: 26px;
-      cursor: pointer;
-      content: "";
-      background-image: url("../../img/icon-placeholder.svg");
-      background-size: 18px 26px;
-    }
+    justify-content: space-between;
+    padding-top: 20px;
   }
 
   .estate__address {
@@ -358,7 +343,6 @@
   }
 
   .estate__info {
-    width: 350px;
     font-size: 16px;
     line-height: 19px;
   }
