--- a/src/assets/scss/blocks/main-nav.scss
+++ b/src/assets/scss/blocks/main-nav.scss
@@ -23,6 +23,9 @@
 }
 
 .main-nav__wrapper {
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s all ease;
   @include container();
   position: absolute;
   top: 30px;
@@ -31,6 +34,11 @@
   padding-left: 30px;
   background-color: $secondary-black;
   z-index: 10000000;
+
+  &.active{
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 .main-nav__list {
@@ -61,8 +69,8 @@
   font-size: 13px;
   font-weight: 600;
   line-height: 22px;
-  padding-left: 20px;
-  transition: color 0.3s 0.2s;
+  padding-bottom: 6px;
+  transition: color 0.2s;
 
   &:hover,
   &:focus {
@@ -130,7 +138,7 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 22px;
-    transition: text-decoration 0.3s;
+    transition: text-decoration 0.1s;
 
     &:hover,
     &:focus {
@@ -147,7 +155,7 @@
     height: 2px;
     opacity: 0;
     background-color: $primary-pink;
-    transition: width 0.3s, opacity 1s;
+    transition: width 0.25s, opacity 0.1s;
     transition-delay: 0.1s;
   }
 
