--- a/src/assets/scss/blocks/rating.scss
+++ b/src/assets/scss/blocks/rating.scss
@@ -109,6 +109,7 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
+  border: 8px solid red;
   background-color: transparent;
   z-index: 100;
 }
@@ -221,6 +222,7 @@
     padding: 0 75px;
     padding-bottom: 95px;
   }
+
   .rating__title {
     font-size: 22px;
     line-height: 32px;
@@ -237,7 +239,7 @@
     font-size: 13px;
     line-height: 28px;
     padding: 0 10px;
-    margin-bottom: 85px;
+    margin-bottom: 24px;
 
     &-figure {
       width: 134px;
@@ -263,29 +265,89 @@
 
   .rating__list-figure {
 
-    &--kids svg {
-      width: 64px ;
-      height: 46px;
+    &--kids {
+
+      svg {
+        width: 64px;
+        height: 46px;
+      }
+
+      .rating__value{
+        background-color: #e94646;
+      }
+      .rating__list-border{
+        border-color: #e94646;
+      }
     }
-    &--infrastructure svg {
-      width: 56px;
-      height: 56px;
+
+    &--infrastructure {
+      svg {
+        width: 56px;
+        height: 56px;
+      }
+
+      .rating__value{
+        background-color: #ff833d;
+      }
+      .rating__list-border{
+        border-color:#ff833d;
+      }
     }
-    &--district svg {
-      width: 57px;
-      height: 57px;
+
+    &--district {
+      svg {
+        width: 57px;
+        height: 57px;
+      }
+
+      .rating__value{
+        background-color: #86d3ff;
+      }
+      .rating__list-border{
+        border-color:#86d3ff;
+      }
     }
-    &--safety svg {
-      width: 39px;
-      height: 51px;
+
+    &--safety {
+      svg {
+        width: 39px;
+        height: 51px;
+      }
+
+      .rating__value{
+        background-color: #66cf6a;
+      }
+      .rating__list-border{
+        border-color:#66cf6a;
+      }
     }
-    &--transport svg {
-      width: 62px;
-      height: 41px;
+
+    &--transport {
+      svg {
+        width: 62px;
+        height: 41px;
+      }
+
+      .rating__value{
+        background-color: #6677cf;
+      }
+      .rating__list-border{
+        border-color:#6677cf;
+      }
     }
-    &--house svg {
-      width: 55px;
-      height: 54px;
+    
+    &--house {
+      svg {
+        width: 55px;
+        height: 54px;
+      }
+
+      .rating__value{
+        background-color: #c368da;
+      }
+      .rating__list-border{
+        border-color:#c368da;
+      }
     }
   }
 
