--- a/src/assets/scss/blocks/blog.scss
+++ b/src/assets/scss/blocks/blog.scss
@@ -13,15 +13,58 @@
   color: $primary-black;
   margin-bottom: 25px;
 }
+.blog__avatar-wrap{
+  width: 180px;
+  height: 180px;
+  float: left;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #fff0f0;
+  margin-right: 50px;
 
+  .icon{
+    width: 80px;
+  }
+
+ @media(max-width: 1359px){
+   width: 120px;
+   height: 120px;
+   margin-right: 25px;
+   .icon{
+    width: 40px;
+  }
+ }
+ @media(max-width: 768px){
+   width: 80px;
+   height: 80px;
+   .icon{
+    width: 30px;
+  }
+ }
+}
+.blog__header{
+  margin-bottom: 35px;
+
+  @media(max-width: 1359px){
+    margin-bottom: 12px;
+ }
+}
 .blog__avatar {
   float: left;
   margin-right: 20px;
 }
 
 .blog__box {
+  padding-left: 50px;
   display: flex;
   flex-direction: column;
+
+  @media(max-width: 1359px){
+    padding-left: 25px;
+ }
 }
 
 .blog__author {
@@ -40,13 +83,14 @@
   font-size: 11px;
   font-weight: 400;
   line-height: 16px;
-  margin-bottom: 5px;
+  margin-bottom: 14px;
 }
 
 .blog__description {
   font-size: 12px;
   font-weight: 400;
   line-height: 16px;
+  margin-top: 0;
   margin-bottom: 15px;
   color: $primary-black;
   transition: all 0.3s;
@@ -54,7 +98,8 @@
 
 .blog__image {
   margin-bottom: 15px;
-
+  width: 100%;
+  height: auto;
   &:last-child {
     margin-bottom: 0;
   }
@@ -150,7 +195,6 @@
   .blog__description {
   font-size: 15px;
   line-height: 22px;
-    margin-bottom: 35px;
   }
 
   .blog__image {
