--- a/src/assets/scss/blocks/chart.scss
+++ b/src/assets/scss/blocks/chart.scss
@@ -16,7 +16,7 @@
 
 .chart__wrapper {
   @include container();
-  max-width: 360px;
+  max-width: 360px; width:100%;
   width: 100%;
   display: flex;
   flex-direction: column;
