--- a/src/assets/scss/blocks/estate.scss
+++ b/src/assets/scss/blocks/estate.scss
@@ -36,6 +36,7 @@
 .estate__description-box {
   padding-left: 50px;
   padding-right: 50px;
+  padding-top: 20px;
 }
 
 .estate__address {
@@ -56,7 +57,7 @@
 
   &::before {
     position: absolute;
-    top: -2px;
+    top:0;
     left: -25px;
     width: 18px;
     height: 15px;
@@ -249,7 +250,7 @@
 
   .estate__slider-img {
     width: 100%;
-    height: 580px;
+    height: 370px;
   }
 
   .estate__slider-title {
