--- a/src/assets/scss/blocks/expectation.scss
+++ b/src/assets/scss/blocks/expectation.scss
@@ -132,7 +132,7 @@
 }
 @media (max-width: $tablet-width) {
   .expectation__wrapper {
-    max-width: 360px;
+    max-width: 360px; width:100%;
     width: 100%;
   }
   .expectation .pink__btn{
