--- a/src/assets/scss/blocks/footer.scss
+++ b/src/assets/scss/blocks/footer.scss
@@ -143,13 +143,13 @@
   }
 
   .footer__box {
-    width: 360px;
+    max-width: 360px; width:100%;
     order: 2;
     align-items: flex-end;
   }
 
   .footer__search-form {
-    width: 360px;
+    max-width: 360px; width:100%;
   }
 
   .footer__logo {
