--- a/src/assets/scss/blocks/review.scss
+++ b/src/assets/scss/blocks/review.scss
@@ -6,7 +6,7 @@
   text-align: center;
 }
 .review__wrapper {
-max-width: 360px;
+max-width: 360px; width:100%;
 width: 100%;
 padding: 0 20px;
 margin: 0 auto;
