--- a/src/assets/scss/blocksCatalog/filter-box.scss
+++ b/src/assets/scss/blocksCatalog/filter-box.scss
@@ -163,7 +163,7 @@
   }
 
   & &__btn-show {
-    width: 360px;
+    max-width: 360px; width:100%;
     display: block;
     min-height: 70px;
     font-size: 18px;
