Блок "Подобные ЖК"

--- a/src/assets/scss/blocks/review.scss
+++ b/src/assets/scss/blocks/review.scss
@@ -88,10 +88,10 @@ overflow: hidden;
   height: 530px;
 }
 
-.slick-slider .slick-track {
-  display: flex;
-  align-items: center;
-}
+// .slick-slider .slick-track {
+//   display: flex;
+//   align-items: center;
+// }
 
 .btn-play, .btn-pause {
   display: none;
