--- a/src/assets/scss/blocks/analog.scss
+++ b/src/assets/scss/blocks/analog.scss
@@ -2,7 +2,14 @@
   @include container();
   display: flex;
   flex-direction: column;
-  padding: 0 20px 40px;
+  padding: 0 75px;
+
+  @media(max-width: 1359px){
+    padding: 0 30px;
+  }
+  @media(max-width: 768px){
+    padding: 0 20px;
+  }
 }
 
 .analog__title {
@@ -13,7 +20,53 @@
   margin-bottom: 20px;
   color: $primary-black;
 }
+.analog__item-image-wrap{
+  position: relative;
+  @media(max-width: 575px){
+    height: 180px;
+  }
+}
+.analog__item-title {
+  font-size: 20px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: #ffffff;
+  padding: 10px;
+  margin: 0;
+  background: #00000071;
 
+  @media(max-width: 768px){
+    font-size: 16px;
+  }
+}
+
+.analog__item-box {
+  margin-top: 20px;
+  width: 100%;
+  @media(max-width: 768px){
+    padding-left: 20px;
+    margin-top: 0;
+  }
+  @media(max-width: 575px){
+    margin-top: 16px;
+  }
+  
+}
+.analog__item-image {
+  width: 100%;
+  height: 216px;
+
+  @media(max-width: 768px){
+    width: 260px;
+    height: 180px;
+  }
+  @media(max-width: 575px){
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+}
 .analog__list {
   display: flex;
   flex-wrap: wrap;
@@ -31,24 +84,20 @@
   &:nth-child(2n) {
     margin-right: 0;
   }
+
+  @media(max-width: 768px){
+    flex-wrap: nowrap;
+  }
+  @media(max-width: 575px){
+    flex-wrap: wrap;
+  }
 }
 
-.analog__item-image {
-  width: 110px;
-  margin-right: 20px;
-}
 
-.analog__item-box {
-  width: 190px;
-}
 
-.analog__item-title {
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 16px;
-  margin: 0;
-  color: $primary-pink;
-}
+
+
+
 
 .analog__item-address {
   font-style: normal;
@@ -56,7 +105,7 @@
 
 .analog__item-metro {
   position: relative;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 19px;
   padding: 0;
@@ -64,9 +113,13 @@
   padding-left: 25px;
   color: $primary-grey;
 
+  @media(max-width: 768px){
+    margin-bottom: 10px;
+  }
+
   &::before {
     position: absolute;
-    top: 0;
+    top: 3px;
     left: 0;
     width: 15px;
     height: 12px;
@@ -78,8 +131,7 @@
 }
 
 .analog__item-street {
-  width: 150px;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 16px;
   padding: 0;
@@ -95,9 +147,7 @@
 }
 
 @media(min-width: $tablet-width) {
-  .analog__wrapper {
-    padding: 0 30px 60px;
-  }
+ 
   .analog__title {
     font-size: 18px;
     line-height: 24px;
@@ -116,19 +166,11 @@
     }
   }
 
-  .analog__item-image {
-    width: 230px;
-    height: 140px;
-  }
+  
 
-  .analog__item-box {
-    width: 448px;
-  }
+  
 
-  .analog__item-title {
-    font-size: 16px;
-    margin-bottom: 30px;
-  }
+ 
 
   .analog__item-metro {
     font-size: 14px;
@@ -144,9 +186,7 @@
 }
 
 @media(min-width: $desktop-width) {
-  .analog__wrapper {
-    padding: 0 75px 80px;
-  }
+ 
 
   .analog__title {
     font-size: 22px;
@@ -162,21 +202,11 @@
     margin-bottom: 0;
   }
 
-  .analog__item-image {
-    width: 280px;
-    height: 200px;
-    margin-right: 30px;
-  }
+  
 
-  .analog__item-box {
-    width: 240px;
-    margin-right: 55px;
-  }
+ 
 
-  .analog__item-title {
-    font-size: 20px;
-    margin-bottom: 40px;
-  }
+  
 
   .analog__item-metro {
     font-size: 16px;
@@ -190,7 +220,6 @@
   }
 
   .analog__item-street {
-    width: 200px;
     font-size: 16px;
     line-height: 24px;
   }
