--- a/src/assets/scss/blocks/modal.scss
+++ b/src/assets/scss/blocks/modal.scss
@@ -1,15 +1,17 @@
 .modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 100000000;
-  background-color: rgba(255, 255, 255, 1);
+  
   overflow: auto;
-  visibility: visible;
-  opacity: 1;
-  transition: opacity 0.3s ;
+  
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+  padding: 0 15px 0;
 
   input, textarea{
     width: 100%;
@@ -19,7 +21,9 @@
     border: 1px solid #929292;
   }
 
-  
+  &__title-box {
+    position: relative;
+  }
   
   &__wrapper {
     position: absolute;
@@ -35,6 +39,7 @@
     box-shadow: 0 0 18px 0 rgba(0,0,0,.45);
     transition: top 0.25s, opacity 0.25s;
     opacity: 0;
+    margin-bottom: 20px;
   }
 
   &.active{
@@ -47,7 +52,16 @@
     }
   }
 
- 
+  &__title {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 18px;
+    color: #fff;
+
+    @media(max-width: 768px){
+      font-size: 16px;
+    }
+  }
 }
 
 .modal-close-btn, .modal__header-btn-close{
@@ -75,9 +89,7 @@
     width: 100%;
     margin-bottom: 4px;
 
-    .modal__title {
-      color: $primary-white;
-    }
+    
   }
 
   .modal__img {
@@ -238,12 +250,7 @@
   color: $secondary-black;
 }
 
-.modal__title {
-  font-size: 15px;
-  font-weight: 600;
-  line-height: 16px;
-  color: $secondary-black;
-}
+
 
 .modal__text {
   font-size: 13px;
@@ -312,11 +319,7 @@
     margin-bottom: 40px;
   }
 
-  .modal__title {
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 18px;
-  }
+ 
 
   .modal__text {
     font-size: 14px;
@@ -326,18 +329,14 @@
 }
 
 @media(min-width: $desktop-width) {
-  .modal {
-    background-color: transparent;
-  }
+
 
   .modal__logo {
     width: 150px;
     height: 86px;
   }
 
-  .consultation__modal .modal__title {
-    color: $primary-white;
-  }
+ 
 
   .modal__btn--consultation {
     width: 230px;
