--- a/src/assets/scss/blocks/documents.scss
+++ b/src/assets/scss/blocks/documents.scss
@@ -22,10 +22,11 @@
 }
 
 .documents__item {
+  text-decoration: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 340px;
+  width: 100%;
   margin-bottom: 10px;
   font-size: 13px;
   font-weight: 400;
@@ -55,7 +56,6 @@
 }
 
 .documents__item-size {
-  width: 60px;
   font-size: 13px;
   font-weight: 400;
   line-height: 32px;
@@ -158,7 +158,6 @@
   }
 
   .documents__item-size {
-    width: 50px;
     font-size: 16px;
   }
 
