--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -176,8 +176,21 @@ body {
     opacity: 1;
   }
 }
-
-
+.container-details{
+  max-width: 1360px;
+  margin: auto;
+}
+.sign-up-btn{
+  @media(max-width: 1359px){
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+}
+.center-block{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 // loading block
 .wrap-loading{
   width: 100%;
