--- a/src/assets/scss/blocks/feedback.scss
+++ b/src/assets/scss/blocks/feedback.scss
@@ -148,6 +148,10 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 30px;
+
+  &:last-child{
+    margin-bottom: 0;
+  }
 }
 
 .feedback-content {
