--- a/src/assets/scss/blocks/review.scss
+++ b/src/assets/scss/blocks/review.scss
@@ -13,6 +13,9 @@ margin: 0 auto;
 overflow: hidden;
 }
 
+.video-slider{
+  cursor: grab;
+}
 /*video-slider*/
 
 .wrapper {
@@ -38,16 +41,14 @@ overflow: hidden;
 }
 
 .slide__video {
-  display: none;
+  // display: none;
   pointer-events: none;
 }
 
 .slide__video-active {
   display: block;
 }
-.slide__video-active:hover{
-  border: 10px solid red;
-}
+
 .slide__video-active:hover .btn-pause {
   display: flex;
   justify-content: center;
@@ -139,9 +140,21 @@ overflow: hidden;
 .btn-play img.pause{
   margin-left: 0;
 }
-
+.video-slider__item{
+  .wrap-loading{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
 .video-slider .slick-list.draggable {
   height: 320px;
+}
+.video-slider .slick-track{
+  display: flex;
+  align-items: center;
 }
 
 /* wqdqdwqdqw */
@@ -181,7 +194,7 @@ overflow: hidden;
   }
 
   .video-slider.slick-initialized.slick-slider{
-    height: 320px !important;
+    height: 260px;
   }
 }
 
