--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -179,6 +179,7 @@ body {
 .container-details{
   max-width: 1360px;
   margin: auto;
+  padding: 0 20px;
 }
 .sign-up-btn{
   @media(max-width: 1359px){
