модальное окно экскурсии. custom hooks for inputs

--- a/src/assets/scss/blocks/modal.scss
+++ b/src/assets/scss/blocks/modal.scss
@@ -49,6 +49,11 @@
     .modal__wrapper{
       top: 42%;
       opacity: 1;
+
+      @media(max-width: 768px){
+        top: 0;
+        transform: translate(-50%, 0);
+      }
     }
   }
 
