--- a/src/assets/scss/blocks/excursion.scss
+++ b/src/assets/scss/blocks/excursion.scss
@@ -1,4 +1,18 @@
 
+.excursion {
+  .modal__btn {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .modal__wrapper{
+    padding-bottom: 36px;
+    @media(max-width: 768px){
+      padding-bottom: 16px;
+    }
+  }
+
+}
 .excursion__wrapper {
   @include container();
   padding: 0 20px 40px;
@@ -10,6 +24,8 @@
       margin-bottom: 10px;
     }
   }
+
+  
 }
 
 .excursion__form {
@@ -82,6 +98,9 @@
   height: 100px;
   background-color: $secondary-white;
 
+  @media(max-width: 768px){
+    margin-top: 20px;
+  }
   .date,
   .time {
     font-weight: bold;
@@ -114,6 +133,7 @@
   width: 106px;
   margin: auto;
   position: relative;
+  margin-top: 20px;
 }
 
 .excursion__select-arrow {
@@ -135,6 +155,8 @@
 }
 
 .excursion__select-time {
+  border: 1px solid #929292;
+  outline: none;
   width: 100%;
   height: 40px;
   position: relative;
@@ -364,6 +386,8 @@
     padding: 12px;
     border-radius: 4px;
     box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.45);
+
+    
   }
 
   .excursion__modal.modal {
@@ -381,5 +405,6 @@
   }
   .modal__content-right .modal__btn{
       max-width: 300px;
+      margin-top: 20px;
   }
 }
