--- a/src/assets/scss/blocks/feedback.scss
+++ b/src/assets/scss/blocks/feedback.scss
@@ -17,7 +17,8 @@
 .feedback__toggler {
   display: flex;
   margin: 0 auto;
-  width: 300px;
+  max-width: 300px;
+  width: 100%;
   border-radius: 17px;
   margin-bottom: 35px;
   background-color: $secondary-white;
