Сделал избранное и мелкие сисправления

--- a/src/assets/scss/blocks/description.scss
+++ b/src/assets/scss/blocks/description.scss
@@ -5,7 +5,9 @@
 }
 
 .description__title {
-  display: none;
+  @media(max-width: 768px){
+    font-size: 15px;
+  }
 }
 
 .description__text {
@@ -27,7 +29,11 @@
 
 .description__table {
   width: 100%;
-  cursor: pointer;
+
+  @media(max-width: 1359px){
+    cursor: pointer;
+  }
+  
 
   & tr {
     display: flex;
