--- a/src/assets/scss/blocksCatalog/header-catalog.scss
+++ b/src/assets/scss/blocksCatalog/header-catalog.scss
@@ -3,6 +3,11 @@
 .header-catalog {
   padding-left: 70px;
 
+  @media(max-width: 768px){
+      position: static;
+      height: 119px;
+}
+
   &__wrap {
     display: flex;
     justify-content: space-between;
